pkg/front_end/testcases/general/error_recovery/empty_await_for.dart
// @dart=2.9
main() async {
  await for () {}
}
